--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,23 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask = "*"
+numpy = "*"
+pandas = "*"
+matplotlib = "*"
+ipykernel = "*"
+black = "*"
+seaborn = "*"
+openpyxl = "*"
+plotly = "*"
+plotly-express = "*"
+nbformat = "*"
+requests = "*"
+html5lib = "*"
+bs4 = "*"
+lxml = "*"
+python-dotenv = "*"
+dash = "*"
+dash-bootstrap-components = "*"
 
 [dev-packages]
 
